fix: Bumped the popover z-index (#1374)

--- a/scss/components/popover.scss
+++ b/scss/components/popover.scss
@@ -10,7 +10,7 @@ $block: #{$fd-namespace}-popover;
   $fd-popover-top-position-noarrow: 100% !default;
   $fd-popover-left-position: 0 !default;
   $fd-popover-border: solid 1px $fd-forms-border-color !default;
-  $fd-popover-z-index: map-get($fd-z-index-levels, "second") !default;
+  $fd-popover-z-index: map-get($fd-z-index-levels, "top") !default;
   $fd-popover-background-color: fd-color(background, 2) !default;
 
   $fd-popover-arrow-top-back: -9px !default;
